--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment-timezone": "^0.5.37",
     "node-fetch": "^2.6.7",
     "node-html-parser": "^6.1.1",
+    "read-excel-file": "^5.5.3",
     "telegraf": "^4.10.0"
   },
   "engines": {
